compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_with.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        end_location: Location {
            row: 1,
            column: 18,
        },
        custom: (),
        node: With {
            items: [
                Withitem {
                    context_expr: Located {
                        location: Location {
                            row: 1,
                            column: 6,
                        },
                        end_location: Location {
                            row: 1,
                            column: 7,
                        },
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                    optional_vars: Some(
                        Located {
                            location: Location {
                                row: 1,
                                column: 11,
                            },
                            end_location: Location {
                                row: 1,
                                column: 12,
                            },
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Store,
                            },
                        },
                    ),
                },
            ],
            body: [
                Located {
                    location: Location {
                        row: 1,
                        column: 14,
                    },
                    end_location: Location {
                        row: 1,
                        column: 18,
                    },
                    custom: (),
                    node: Pass,
                },
            ],
            type_comment: None,
        },
    },
]
