compiler/parser/src/snapshots/rustpython_parser__context__tests__aug_assign_attribute.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        end_location: Location {
            row: 1,
            column: 17,
        },
        custom: (),
        node: AugAssign {
            target: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Location {
                    row: 1,
                    column: 4,
                },
                custom: (),
                node: Attribute {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 1,
                        },
                        end_location: Location {
                            row: 1,
                            column: 2,
                        },
                        custom: (),
                        node: Name {
                            id: "x",
                            ctx: Load,
                        },
                    },
                    attr: "y",
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                location: Location {
                    row: 1,
                    column: 9,
                },
                end_location: Location {
                    row: 1,
                    column: 16,
                },
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 9,
                            },
                            end_location: Location {
                                row: 1,
                                column: 10,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 12,
                            },
                            end_location: Location {
                                row: 1,
                                column: 13,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 15,
                            },
                            end_location: Location {
                                row: 1,
                                column: 16,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
        },
    },
]
