compiler/parser/src/snapshots/rustpython_parser__context__tests__aug_assign_name.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        end_location: Location {
            row: 1,
            column: 7,
        },
        custom: (),
        node: AugAssign {
            target: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Location {
                    row: 1,
                    column: 2,
                },
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                location: Location {
                    row: 1,
                    column: 6,
                },
                end_location: Location {
                    row: 1,
                    column: 7,
                },
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
        },
    },
]
