compiler/parser/src/snapshots/rustpython_parser__context__tests__del_attribute.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: Delete {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 6,
                    },
                    custom: (),
                    node: Attribute {
                        value: Located {
                            location: Location {
                                row: 1,
                                column: 5,
                            },
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Load,
                            },
                        },
                        attr: "y",
                        ctx: Del,
                    },
                },
            ],
        },
    },
]
